--- a/client/makelunch.css
+++ b/client/makelunch.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  font-weight: 100;
 }
 .visible-xs-block { display: block; }
 .visible-xs-inline-block { display: inline-block; }
@@ -15,6 +16,7 @@ a {
   height: 2em;
 }
 .icon svg {
+  fill: currentColor;
   display: inline-block;
   width: 100%;
   height: 100%;
@@ -25,11 +27,12 @@ a {
 }
 
 body {
-  background-color: #D17B69;
+  background-color: #F74118;
   color: #FFF;
   padding-top: 56px;
 }
 body > header {
+  z-index: 4;
   background-color: #2F9FF1;
   position: fixed;
   width: 100%;
@@ -81,32 +84,53 @@ body > header > nav a .fa {
   display: none;
 }
 
-
-.deck .card {
+.card {
+  overflow: hidden;
   position: relative;
   height: 300px;
   height: calc(100vw - 20px);
+  margin-bottom: 5px;
 }
-.deck .card > h2 {
+body.home .card {
+  width: calc(100% + 20px);
+  margin-left: -10px;
+  margin-right: -10px;
+  height: 320px;
+  height: calc(100vw);
+}
+.card > h2 {
   position: absolute;
   top: 0;
   margin: 0;
   padding: 5px 10px;
   width: 100%;
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0,0,0,0.6);
 }
-.deck .card > h2 .score {
+.card > h2 .score {
   float: right;
 }
-.deck .card img {
+.card img, .card .photoframe {
   width: 100%;
 }
-.deck .card .stats {
+.card .stats {
   position: absolute;
+  text-align: center;
   bottom: 0;
   padding: 5px 10px;
   width: 100%;
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0,0,0,0.6);
+}
+body.addmeal .card {
+  display: inline-block;
+  width: calc(50% - 5px);
+  height: 150px;
+  height: calc(50vw - 20px);
+}
+body.addmeal .card > h2 {
+  font-size: 14px;
+}
+body.addmeal .card:nth-child(odd) {
+  margin-right: 5px;
 }
 @media (min-width: 768px) {
   /* SM */
