--- a/client/makelunch.css
+++ b/client/makelunch.css
@@ -27,13 +27,14 @@ a {
 }
 
 body {
-  background-color: #F74118;
-  color: #FFF;
+  background-color: #FFF;
+  color: #000;
   padding-top: 56px;
 }
 body > header {
   z-index: 4;
   background-color: #2F9FF1;
+  color: #FFF;
   position: fixed;
   width: 100%;
   top: 0;
@@ -49,7 +50,6 @@ body > header .logo .icon {
   height: 2em;
 }
 body > header .menu-toggle {
-  color: #FFF;
   float: right;
   display: inline-block;
 }
@@ -60,13 +60,13 @@ body > header .menu-toggle .icon {
 body > header > nav {
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.4s;
+  transition: max-height 0.25s;
 }
 body > header.active {
   box-shadow: 0 0px 20px 5px #666;
 }
 body > header.active > nav {
-  max-height: 130px;
+  max-height: 160px;
 }
 body > header > nav > a {
   display: block;
@@ -85,6 +85,7 @@ body > header > nav a .fa {
 }
 
 .card {
+  color: #FFF;
   overflow: hidden;
   position: relative;
   height: 300px;
@@ -98,7 +99,7 @@ body.home .card {
   height: 320px;
   height: calc(100vw);
 }
-.card > h2 {
+.card > .label-top {
   position: absolute;
   top: 0;
   margin: 0;
@@ -106,7 +107,7 @@ body.home .card {
   width: 100%;
   background-color: rgba(0,0,0,0.6);
 }
-.card > h2 .score {
+.card > .label-top .score {
   float: right;
 }
 .card img, .card .photoframe {
@@ -120,24 +121,43 @@ body.home .card {
   width: 100%;
   background-color: rgba(0,0,0,0.6);
 }
+
+/* ADD MEAL */
 body.addmeal .card {
   display: inline-block;
   width: calc(50% - 5px);
   height: 150px;
   height: calc(50vw - 20px);
 }
-body.addmeal .card > h2 {
+body.addmeal .card > .label-top {
+  overflow: hidden;
   font-size: 14px;
+  height: 26px;
+  transition: height 0.25s;
 }
 body.addmeal .card:nth-child(odd) {
   margin-right: 5px;
 }
+body.addmeal .card.eating > .label-top {
+  height: 100%;
+}
+body.addmeal .card.eating > .label-top span { display: none; }
+body.addmeal .card.eating > .label-top:before {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  content: '\1F374';
+  color: white;
+  font-size: 64px;
+  text-align: center;
+}
+body.addmeal .card.eating.chef > .label-top:before { content: '\1F373'; }
 @media (min-width: 768px) {
   /* SM */
-  .visible-xs-inline-block { display: none; }
-  body > header .logo {
-    display: inline-block;
-  }
+  .visible-xs-inline-block, .visible-xs-block { display: none; }
+  .hidden-xs { display: block; }
+
 }
 @media (min-width: 992px) {
   /* MD */
