--- a/client/makelunch.css
+++ b/client/makelunch.css
@@ -133,15 +133,16 @@ body.addmeal .card > .label-top {
   overflow: hidden;
   font-size: 14px;
   height: 26px;
-  transition: height 0.25s;
+  transition: all 0.2s;
 }
 body.addmeal .card:nth-child(odd) {
   margin-right: 5px;
 }
 body.addmeal .card.eating > .label-top {
   height: 100%;
+  background-color: rgba(0,0,0,0.8);
 }
-body.addmeal .card.eating > .label-top span { display: none; }
+body.addmeal .card.eating > .label-top span {  }
 body.addmeal .card.eating > .label-top:before {
   position: absolute;
   left: 50%;
@@ -153,6 +154,23 @@ body.addmeal .card.eating > .label-top:before {
   text-align: center;
 }
 body.addmeal .card.eating.chef > .label-top:before { content: '\1F373'; }
+body.addmeal input {
+  border: 1px solid #555;
+  box-shadow: none;
+  width: 100%;
+  height: 36px;
+  margin: 5px 0;
+  padding: 4px 6px;
+}
+body.addmeal button[type=submit] {
+  margin-top: 5px;
+  width: 100%;
+  padding: 8px 12px;
+  border: none;
+  background-color: #F53F16;
+  color: #FFF;
+}
+
 @media (min-width: 768px) {
   /* SM */
   .visible-xs-inline-block, .visible-xs-block { display: none; }
