--- a/client/makelunch.css
+++ b/client/makelunch.css
@@ -9,6 +9,12 @@ a {
   text-decoration: none;
   color: inherit;
 }
+.tint {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.2);
+}
 .icon {
   display: inline-block;
   margin: 0 auto;
@@ -169,6 +175,42 @@ body.addmeal button[type=submit] {
   border: none;
   background-color: #F53F16;
   color: #FFF;
+}
+/* MEALS */
+body.meals .meal .photoFrame {
+  display: inline-block;
+  width: calc(20% - 2px);
+  margin: 1px;
+}
+body.meals .meal {
+  text-align: right;
+  position: relative;
+  margin-bottom: 5px;
+}
+body.meals .meal .tint {
+  z-index: 2;
+  background-color: rgba(0,0,0,0.4);
+}
+body.meals .meal .photoFrame img { width: 100%; }
+body.meals .meal .names {
+  font-size: 20px;
+  color: #FFF;
+  z-index: 3;
+  position: absolute;
+  top: 5px;
+  left: 5px;
+}
+body.meals .meal .names span:not(:last-child):before {
+  content: ' & ';
+}
+body.meals .meal .dish {
+  font-size: 20px;
+  color: #FFF;
+  z-index: 3;
+  position: absolute;
+  font-weight: 700;
+  top: 32px;
+  left: 5px;
 }
 
 @media (min-width: 768px) {
