--- a/client/makelunch.css
+++ b/client/makelunch.css
@@ -189,7 +189,7 @@ body.addmeal .card.eating > .label-top:before {
   text-align: center;
 }
 body.addmeal .card.eating.chef > .label-top:before { content: '\1F373'; }
-body.addmeal input {
+input.form-control[type=text], input.form-control[type=number], input.form-control[type=url] {
   border: 1px solid #555;
   box-shadow: none;
   width: 100%;
@@ -197,9 +197,10 @@ body.addmeal input {
   margin: 5px 0;
   padding: 4px 6px;
 }
-body.addmeal button[type=submit] {
+button[type=submit] {
   margin-top: 5px;
   width: 100%;
+  border-radius: 3px;
   padding: 8px 12px;
   border: none;
   background-color: #F53F16;
@@ -240,6 +241,11 @@ body.meals .meal .dish {
   font-weight: 700;
   top: 32px;
   left: 5px;
+}
+
+/* EDIT PERSON */
+body.editperson .editimg img {
+  width: 100%;  
 }
 
 @media (min-width: 768px) {
