--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -66,6 +66,7 @@ body > header .menu-toggle .icon {
 body > header > nav {
   max-height: 0;
   overflow: hidden;
+  transform: translateZ(0);
   transition: max-height 0.25s;
 }
 body > header.active {
@@ -121,11 +122,13 @@ body.home .card {
   width: 100%;
 }
 .card .stats {
+  transform: translateZ(0);
   overflow: hidden;
   position: absolute;
   text-align: center;
-  top: calc(~"100% - 35px");
+  top: calc(~"100% - 39px");
   bottom: 0;
+  font-size: 18px;
   transition: top 0.15s;
   padding: 10px;
   width: 100%;
@@ -141,13 +144,13 @@ body.home .card {
 }
 .card .stats .card-buttons {
   position: absolute;
+  left: -100%;
   width: calc(~"100% - 20px");
-  opacity: 0;
-  transition: opacity 0.1s;
+  transition: left 0.15s;
   bottom: 5px;
 }
 .card:hover .stats .card-buttons, .card:focus .stats .card-buttons {
-  opacity: 1;
+  left: 10px;
 }
 .card .stats .card-buttons a {
   display: block;
@@ -169,6 +172,7 @@ body.addmeal .card > .label-top {
   overflow: hidden;
   font-size: 14px;
   height: 26px;
+  transform: translateZ(0);
   transition: all 0.2s;
 }
 body.addmeal .card:nth-child(odd) {
@@ -207,41 +211,43 @@ button[type=submit] {
   color: #FFF;
 }
 /* MEALS */
-body.meals .meal .photoFrame {
-  display: inline-block;
-  width: calc(~"20% - 2px");
-  margin: 1px;
-}
 body.meals .meal {
   text-align: right;
   position: relative;
   margin-bottom: 5px;
-}
-body.meals .meal .tint {
-  z-index: 2;
-  background-color: rgba(0,0,0,0.4);
-}
-body.meals .meal .photoFrame img { width: 100%; }
-body.meals .meal .names {
-  font-size: 20px;
-  color: #FFF;
-  z-index: 3;
-  position: absolute;
-  top: 5px;
-  left: 5px;
-}
-body.meals .meal .names span:not(:last-child):before {
-  content: ' & ';
-}
-body.meals .meal .dish {
-  font-size: 20px;
-  color: #FFF;
-  z-index: 3;
-  position: absolute;
-  font-weight: 700;
-  top: 32px;
-  left: 5px;
-}
+  padding: 0 1px;
+  .photoFrame {
+    display: inline-block;
+    width: 20%;
+    margin: 0 -2px;
+    img {
+      width: 100%;
+      vertical-align: middle;
+    }
+  }
+  .tint {
+    z-index: 2;
+    background-color: rgba(0,0,0,0.4);
+  }
+  .names {
+    font-size: 20px;
+    color: #FFF;
+    z-index: 3;
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    span:not(:last-child):before { content: ' & '; }
+  }
+  .dish {
+    font-size: 20px;
+    color: #FFF;
+    z-index: 3;
+    position: absolute;
+    font-weight: 700;
+    top: 32px;
+    left: 5px;
+  }
+} 
 
 /* EDIT PERSON */
 body.editperson .editimg img {
