--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -213,9 +213,12 @@ button[type=submit] {
 /* MEALS */
 body.meals .meal {
   text-align: right;
+  overflow: hidden;
   position: relative;
   margin-bottom: 5px;
   padding: 0 1px;
+  background-color: rgba(255, 255, 255, 0);
+  transition: background-color 0.25s;
   .photoFrame {
     display: inline-block;
     width: 20%;
@@ -227,31 +230,55 @@ body.meals .meal {
   }
   .tint {
     z-index: 2;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(47, 159, 241, 0.8);
+    transition: background-color 0.25s;
   }
-  .names {
+  &:hover, &:focus {
+    background-color: rgba(47, 159, 241, 0.5);
+    .tint {
+      background-color: rgba(47, 159, 241, 0);
+    }
+    .centred-content {
+      opacity: 0;
+    }
+    .btn-edit-meal {
+      right: 5px;
+    }
+  }
+  .centred-content {
+    opacity: 1;
+    position: absolute;
+    text-align: center;
+    z-index: 3;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: opacity 0.25s;
     font-size: 20px;
     color: #FFF;
-    z-index: 3;
+    .names {
+      span:not(:last-child):before { content: ' & '; }
+    }
+    .dish {
+      font-weight: bold;
+    }
+  }
+  .btn-edit-meal {
     position: absolute;
     top: 5px;
-    left: 5px;
-    span:not(:last-child):before { content: ' & '; }
-  }
-  .dish {
-    font-size: 20px;
-    color: #FFF;
-    z-index: 3;
-    position: absolute;
-    font-weight: 700;
-    top: 32px;
-    left: 5px;
+    right: -100%;
+    color: white;
+    background-color: #F94816;
+    border-radius: 3px;
+    padding: 6px 12px;
+    z-index: 4;
+    transition: right 0.5s;
   }
 } 
 
 /* EDIT PERSON */
 body.editperson .editimg img {
-  width: 100%;  
+  width: 100%;
 }
 
 @media (min-width: 768px) {
