--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -31,6 +31,23 @@ a {
 .container {
   padding: 10px;
 }
+input.form-control[type=text], input.form-control[type=number], input.form-control[type=url], input.form-control[type=date] {
+  border: 1px solid #555;
+  box-shadow: none;
+  width: 100%;
+  height: 36px;
+  margin: 5px 0;
+  padding: 4px 6px;
+}
+button[type=submit] {
+  margin-top: 5px;
+  width: 100%;
+  border-radius: 3px;
+  padding: 8px 12px;
+  border: none;
+  background-color: #F53F16;
+  color: #FFF;
+}
 
 body {
   background-color: #FFF;
@@ -162,53 +179,38 @@ body.home .card {
 }
 
 /* ADD MEAL */
-body.addmeal .card {
-  display: inline-block;
-  width: calc(~"50% - 5px");
-  height: 150px;
-  height: calc(~"50vw - 20px");
-}
-body.addmeal .card > .label-top {
-  overflow: hidden;
-  font-size: 14px;
-  height: 26px;
-  transform: translateZ(0);
-  transition: all 0.2s;
-}
-body.addmeal .card:nth-child(odd) {
-  margin-right: 5px;
-}
-body.addmeal .card.eating > .label-top {
-  height: 100%;
-  background-color: rgba(47, 159, 241, 0.9);
-}
-body.addmeal .card.eating > .label-top:before {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  content: '\1F374';
-  color: white;
-  font-size: 64px;
-  text-align: center;
-}
-body.addmeal .card.eating.chef > .label-top:before { content: '\1F373'; }
-input.form-control[type=text], input.form-control[type=number], input.form-control[type=url] {
-  border: 1px solid #555;
-  box-shadow: none;
-  width: 100%;
-  height: 36px;
-  margin: 5px 0;
-  padding: 4px 6px;
-}
-button[type=submit] {
-  margin-top: 5px;
-  width: 100%;
-  border-radius: 3px;
-  padding: 8px 12px;
-  border: none;
-  background-color: #F53F16;
-  color: #FFF;
+body.addmeal, body.editmeal {
+  .card {
+    display: inline-block;
+    width: calc(~"50% - 5px");
+    height: 150px;
+    height: calc(~"50vw - 20px");
+    > .label-top {
+      overflow: hidden;
+      font-size: 14px;
+      height: 26px;
+      transform: translateZ(0);
+      transition: all 0.2s;
+    }
+  }
+  .card:nth-child(odd) {
+    margin-right: 5px;
+  }
+  .card.eating > .label-top {
+    height: 100%;
+    background-color: rgba(47, 159, 241, 0.9);
+    &:before {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      content: '\1F374';
+      color: white;
+      font-size: 64px;
+      text-align: center;
+    }
+  }
+  .card.chef > .label-top:before { content: '\1F373'; }
 }
 /* MEALS */
 body.meals .meal {
@@ -242,7 +244,7 @@ body.meals .meal {
       opacity: 0;
     }
     .btn-edit-meal {
-      right: 5px;
+      left: 5px;
     }
   }
   .centred-content {
@@ -265,14 +267,14 @@ body.meals .meal {
   }
   .btn-edit-meal {
     position: absolute;
-    top: 5px;
-    right: -100%;
+    bottom: 5px;
+    left: -100%;
     color: white;
     background-color: #F94816;
     border-radius: 3px;
     padding: 6px 12px;
     z-index: 4;
-    transition: right 0.5s;
+    transition: left 0.5s;
   }
 } 
 
