Twitter is configured from settings.json now

--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -265,7 +265,7 @@ body.meals .meal {
     font-size: 20px;
     color: #FFF;
     .names {
-      span:not(:last-child):before { content: ' & '; }
+      span:not(:last-child):after { content: ' & '; }
     }
     .dish {
       font-weight: bold;
