--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -15,7 +15,7 @@ a {
   padding: 6px 5px;
   color: #FFF;
   text-align: center;
-  border-radius: 3px;
+  border-radius: 0;
   margin-bottom: 5px;
   background-color: rgba(44, 159, 242, 1);
   &:hover {
@@ -50,7 +50,7 @@ input.form-control[type=text], input.form-control[type=number], input.form-contr
   width: 100%;
   height: 36px;
   margin: 5px 0;
-  border-radius: 3px;
+  border-radius: 0;
   padding: 4px 6px;
 }
 .uploadcare-widget {
@@ -59,7 +59,7 @@ input.form-control[type=text], input.form-control[type=number], input.form-contr
 button[type=submit] {
   margin-top: 5px;
   width: 100%;
-  border-radius: 3px;
+  border-radius: 0;
   padding: 8px 12px;
   border: none;
   background-color: #F53F16;
@@ -217,6 +217,9 @@ body.addmeal, body.editmeal {
     }
   }
   .card.chef .eater-status:before { content: '\1F373'; }
+  .btn.delete {
+    padding: 6px 12px;
+  }
 }
 /* MEALS */
 body.meals .meal {
