Removed prefixed ::placeholder styles, let autoprefixer sort that out

--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -294,16 +294,7 @@ body.editperson .editimg img {
   .hidden-xs { display: block; }
 
   body { padding-top: 61px; }
-  input.placeholder-visible-xs::-webkit-input-placeholder {
-    color: transparent;
-  }
-  input.placeholder-visible-xs:-moz-placeholder {
-    color: transparent;
-  }
-  input.placeholder-visible-xs::-moz-placeholder {
-    color: transparent;
-  }
-  input.placeholder-visible-xs:-ms-input-placeholder {  
+  input.placeholder-visible-xs::placeholder {
     color: transparent;
   }
   .form-group {
