check chef has been appointed before allowing meal to be added

--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -65,6 +65,10 @@ button[type=submit] {
   background-color: #F53F16;
   color: #FFF;
 }
+.alert {
+  font-weight: bold;
+  color: #fa4917;
+}
 
 body {
   background-color: #C1CFB8;
@@ -281,7 +285,7 @@ body.meals .meal {
     z-index: 4;
     transition: left 0.5s;
   }
-} 
+}
 
 /* EDIT PERSON */
 body.editperson .editimg img {
