--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -223,6 +223,11 @@ body.addmeal, body.editmeal {
   .card.chef .eater-status:before { content: '\1F373'; }
   .btn.delete {
     padding: 6px 12px;
+    transition: background-color 0.5s;
+    &.verify {
+      background-color: darken(rgba(44, 159, 242, 1), 30%);
+      font-weight: bold;
+    }
   }
 }
 /* MEALS */
