added default 0 to guests box and changed text to make it clear it expects a number.  fixes #9

--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -281,6 +281,7 @@ body.meals .meal {
     }
     .dish {
       font-weight: bold;
+      white-space: nowrap;
       overflow-x: hidden;
       text-overflow: ellipsis;
     }
