--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -158,6 +158,7 @@ body.home .card {
     top: calc(~"100% - 36px");
     bottom: 0;
     font-size: 18px;
+    line-height: 20px;
     transition: top 0.15s;
     padding: 10px;
     width: 100%;
