--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -137,6 +137,8 @@ body.home .card {
   vertical-align: middle;
   > .label-top {
     margin: 0;
+    position: relative;
+    z-index: 1;
     height: 35px;
     padding: 10px 10px;
     width: 100%;
@@ -198,29 +200,17 @@ body.addmeal, body.editmeal {
   .card .eater-status {
     position: absolute;
     width: 100%;
-    top: 35px;
+    height: calc(~"100% - 35px");
     bottom: 100%;
     opacity: 1;
-    transition: all 0.2s;
+    transition: bottom 0.2s, opacity 0.2s, background-color 0.2s;
     overflow: hidden;
   }
   .card.eating .eater-status {
     bottom: 0;
     opacity: 1;
     background-color: rgba(13, 39, 54, 0.8);
-    &:before {
-      position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      content: '\1F374';
-      color: white;
-      font-size: 64px;
-      text-align: center;
-      text-shadow: 2px 2px 12px rgba(0,0,0,0.8);
-    }
   }
-  .card.chef .eater-status:before { content: '\1F373'; }
   .btn.delete {
     padding: 6px 12px;
     transition: background-color 0.5s;
@@ -292,6 +282,28 @@ body.meals .meal {
     left: -100%;
     z-index: 4;
     transition: left 0.5s;
+  }
+}
+
+.mealEaters .card {
+  .icon {
+    position: absolute;
+    color: #fff;
+    bottom: 5%;
+    left: 5%;
+    width: 90%;
+    height: 90%;
+    display: none;
+  }
+  &.chef {
+    .icon-chef {
+      display: block;
+    }
+  }
+  &.eating:not(.chef) {
+    .icon-knife-fork {
+      display: block;
+    }
   }
 }
 
