--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -232,20 +232,31 @@ body.addmeal, body.editmeal {
 }
 /* MEALS */
 body.meals .meal {
-  text-align: right;
   overflow: hidden;
   position: relative;
   margin-bottom: 5px;
   padding: 0 1px;
   background-color: rgba(255, 255, 255, 0);
   transition: background-color 0.25s;
-  .photoFrame {
+  .photoFrame, .guests {
     display: inline-block;
     width: 20%;
     margin: 0 -2px;
     img {
       width: 100%;
       vertical-align: middle;
+    }
+  }
+  .guests {
+    background-color: #0E2835;
+    position: relative;
+    span {
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      font-size: 24px;
     }
   }
   .tint {
@@ -389,7 +400,7 @@ body.editperson .editimg img {
   }
   /* MEALS */
   body.meals .meal {
-    .photoFrame {
+    .photoFrame, .guests {
       width: 10%;
       margin: 0 -2px;
     }
