--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -238,6 +238,14 @@ body.meals .meal {
   padding: 0 1px;
   background-color: rgba(255, 255, 255, 0);
   transition: background-color 0.25s;
+  time {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    color: white;
+    font-size: 12px;
+    z-index: 2;
+  }
   .photoFrame, .guests {
     display: inline-block;
     width: 20%;
@@ -338,8 +346,13 @@ body.editperson .editimg img {
       height: auto;
     }
   }
-  body.meals .meal .centred-content {
-    font-size: 36px;
+  body.meals .meal {
+    .centred-content {
+      font-size: 36px;
+    }
+    time {
+      font-size: 14px;
+    }
   }
   #header {
     height: 56px;
