--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -319,6 +319,15 @@ body.editperson .editimg img {
     margin: 5px -2px 5px 2px;
     height: auto;
     .stats { padding-top: 50px; }
+    &:hover {
+      .stats {
+        border-top: 1px solid white;
+        top: 35px;
+        .card-buttons {
+          left: 10px;
+        }
+      }
+    }
   }
   body.addmeal, body.editmeal {
     .card, .card:nth-child(odd) {
@@ -359,15 +368,6 @@ body.editperson .editimg img {
     &.active {
       box-shadow: none;
       > nav { max-height: auto; }
-    }
-  }
-  .card:hover {
-    .stats {
-      border-top: 1px solid white;
-      top: 35px;
-      .card-buttons {
-        left: 10px;
-      }
     }
   }
 }
