--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -184,6 +184,12 @@ body.home .card {
       }
     }
   }
+  &.basic {
+    .label-top, .photoFrame {
+      -webkit-filter: grayscale(100%);
+      filter: grayscale(100%);
+    }
+  }
   img, .photoFrame { width: 100%; }
 }
 /* ADD MEAL */
