--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -193,6 +193,41 @@ body.addmeal, body.editmeal {
   .card {
     display: inline-block;
     width: calc(~"50% - 5px");
+    .icon {
+      position: absolute;
+      color: black;
+      left: 5%;
+      width: 90%;
+      height: 45%;
+      display: block;
+    }
+    .icon-chef {
+      top: 0;
+    }
+    .icon-knife-fork {
+      top: 56%;
+      height: 42.5%;
+      bottom: 5%;
+    }
+    .eater-status {
+      transition: top 0.25s, bottom 0.25s;
+      bottom: 100%;
+    }
+    &.eating {
+      .eater-status {
+        bottom: 0;
+      }
+    }
+    &.eating.chef {
+      .eater-status {
+        bottom: -100%;
+      }
+    }
+    &.eating:not(.chef) {
+      .icon-knife-fork {
+        display: block;
+      }
+    }
   }
   .card:nth-child(odd) {
     margin-right: 5px;
@@ -200,16 +235,14 @@ body.addmeal, body.editmeal {
   .card .eater-status {
     position: absolute;
     width: 100%;
-    height: calc(~"100% - 35px");
+    height: calc(~"200% - 35px");
     bottom: 100%;
-    opacity: 1;
-    transition: bottom 0.2s, opacity 0.2s, background-color 0.2s;
+    transition: bottom 0.2s;
     overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.9);
   }
   .card.eating .eater-status {
     bottom: 0;
-    opacity: 1;
-    background-color: rgba(13, 39, 54, 0.8);
   }
   .btn.delete {
     padding: 6px 12px;
@@ -282,28 +315,6 @@ body.meals .meal {
     left: -100%;
     z-index: 4;
     transition: left 0.5s;
-  }
-}
-
-.mealEaters .card {
-  .icon {
-    position: absolute;
-    color: #fff;
-    bottom: 5%;
-    left: 5%;
-    width: 90%;
-    height: 90%;
-    display: none;
-  }
-  &.chef {
-    .icon-chef {
-      display: block;
-    }
-  }
-  &.eating:not(.chef) {
-    .icon-knife-fork {
-      display: block;
-    }
   }
 }
 
