Resets font-size on edit meal button

--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -290,6 +290,7 @@ body.meals .meal {
     position: absolute;
     bottom: 5px;
     left: -100%;
+    font-size: 14px;
     z-index: 4;
     transition: left 0.5s;
   }
