Adds user-select: none to cards

--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -131,6 +131,7 @@ body.home .card {
 }
 .card {
   color: #FFF;
+  user-select: none;
   overflow: hidden;
   position: relative;
   margin-bottom: 5px;
