--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Courier Prime";
+  src: url("/fonts/Courier Prime.ttf") format("truetype");
+}
+
 /* GENERAL */
 * {
   box-sizing: border-box;
