Styled homepage a bit

--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -84,13 +84,13 @@ button[type=submit] {
 }
 
 body {
-  background-color: #C1CFB8;
+  background-color: #302E2A;
   color: #000;
   padding-top: 56px;
 }
 body > header {
   z-index: 4;
-  background-color: #0E2835;
+  background-color: #ffc107;
   color: #FFF;
   position: fixed;
   width: 100%;
