--- a/client/home/home.less
+++ b/client/home/home.less
@@ -4,19 +4,23 @@ body.home {
     .card {
       font-family: 'Courier Prime';
       display: inline-block;
-      width: calc(~"50% - 5px");
+      width: calc(~"50% - 4px");
       position: relative;
-      margin-bottom: 10px;
+      overflow: hidden;
+      margin-bottom: 8px;
+      box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12), 0px 2px 2px 0px rgba(0,0,0,0.24);
+      border-radius: 2px;
       &:nth-child(even) {
-        margin-left: 10px;
+        margin-left: 8px;
       }
       .name {
+        letter-spacing: 0.5px;
         position: absolute;
         top: 10px;
         left: 10px;
         color: white;
         font-size: 18px;
-        text-shadow: 0 1px 3px black;
+        text-shadow: 0 0 2px rgba(0,0,0,0.9);
       }
       img {
         width: 100%;
@@ -26,7 +30,6 @@ body.home {
         bottom: 0;
         width: 100%;
         height: 10px;
-        border-top: 1px solid white;
         background-color: rgba(0, 0, 0, 0.4);
         font-size: 0;
         &.positive {
@@ -39,14 +42,13 @@ body.home {
             background-color: #cddc39;
             vertical-align: top;
             margin: 0 0.5px;
-            
           }
           &::before {
             content: ' ';
             display: inline-block;
             height: 100%;
             position: absolute;
-            border-right: 1px solid white;
+            border-right: 1px solid black;
             top: 0;
             left: 50%
           }
@@ -61,7 +63,6 @@ body.home {
             background-color: #ffc107;
             vertical-align: top;
             margin: 0 0.5px;
-            
           }
           &::after {
             content: ' ';
@@ -70,7 +71,7 @@ body.home {
             top: 0;
             right: 50%;
             position: absolute;
-            border-left: 1px solid white;
+            border-left: 1px solid black;
           }
         }
       }
