Add 3 and 4 column grid layout

--- a/client/makelunch.less
+++ b/client/makelunch.less
@@ -84,7 +84,7 @@ button[type=submit] {
 }
 
 body {
-  background-color: #302E2A;
+  background-color: #303030;
   color: #FFF;
   padding-top: 56px;
   font-family: "Courier Prime", monospace;
@@ -97,6 +97,7 @@ body > header {
   width: 100%;
   top: 0;
   min-height: 30px;
+  box-shadow: 0px 0px 4px 0px rgba(0,0,0,0.12), 0px 4px 4px 0px rgba(0,0,0,0.24);
   .logo {
     display: inline-block;
     width: auto;
@@ -212,7 +213,7 @@ body > header {
   }
   .container {
     margin: 0 auto;
-    width: 920px;
+    width: 988px;
     padding: 10px 0;
   }
   #header {
