--- a/client/home/home.less
+++ b/client/home/home.less
@@ -1,19 +1,19 @@
 body.home {
+  & > .container {
+    padding:5px 0;
+  }
   .deck {
     font-size: 0;
   }
   .card {
     font-family: 'Courier Prime';
     display: inline-block;
-    width: calc(~"50% - 4px");
+    width: calc(~"50% - 8px");
+    margin: 4px 4px;
     position: relative;
     overflow: hidden;
-    margin-bottom: 8px;
     box-shadow: 0px 0px 2px 0px rgba(0,0,0,0.12), 0px 2px 2px 0px rgba(0,0,0,0.24);
     border-radius: 2px;
-    &:nth-child(even) {
-      margin-left: 8px;
-    }
     .name {
       letter-spacing: 0.5px;
       position: absolute;
@@ -40,7 +40,7 @@ body.home {
           display: inline-block;
           height: 100%;
           width: 10px;
-          background-color: #cddc39;
+          background-color: #FEC02E;
           vertical-align: top;
           margin: 0 0.5px;
         }
@@ -61,7 +61,7 @@ body.home {
           display: inline-block;
           height: 100%;
           width: 10px;
-          background-color: #ffc107;
+          background-color: #DC3838;
           vertical-align: top;
           margin: 0 0.5px;
         }
@@ -81,14 +81,18 @@ body.home {
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
   }
-}
 
-@media (min-width: 768px) {
-  /* SM */
+  @media (min-width: 768px) {
+    /* SM */
+    .card {
+      width: calc(~"33% - 8px");
+    }
+  }
 
-}
-
-@media (min-width: 992px) {
-  /* MD */
-
+  @media (min-width: 992px) {
+    /* MD */
+    .card {
+      width: calc(~"25% - 8px");
+    }
+  }
 }
