Tightened spacing on eater page

--- a/client/eater/eater.less
+++ b/client/eater/eater.less
@@ -3,6 +3,10 @@ body.eater {
     display: inline-block;
     width: 50%;
   }
+  .ratio {
+    font-weight: 500;
+    margin: 0;
+  }
   .eater-pic {
     float: right;
     width: 50%;
